[package]
name = "concache"
version = "0.1.0"
authors = ["Aditya Saligrama <saligrama427@gmail.com>", "Andrew Shen <shenandrew95@gmail.com>", "Jon Gjengset <jon@thesquareplanet.com>"]

[dependencies]
rand = "0.5.0"
crossbeam = "0.3.2"
chashmap = "2.1.0"
clap = "2.20.3"
zipf = "4.0.0"

[profile.release]
debug = true

[[bin]]
name="crossbeam-main"
path="src/crossbeam/main.rs"

[[bin]]
name="manual-main"
path="src/manual/main.rs"

[[bin]]
name="benchmark"
path="src/bin/benchmark.rs"
