[package]
name = "concache"
version = "0.2.1"
authors = ["Aditya Saligrama <saligrama427@gmail.com>", "Andrew Shen <shenandrew95@gmail.com>", "Jon Gjengset <jon@thesquareplanet.com>"]

description = "A fast, concurrent, shared hash map."
readme = "README.md"

homepage = "https://github.com/saligrama/concache"
repository = "https://github.com/saligrama/concache.git"

keywords = ["map","lock-free"]
categories = ["concurrency", "data-structures"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "saligrama/concache" }

[features]
bench = ["clap", "zipf", "chashmap", "rand"]

[dependencies]
crossbeam = "0.3.2"
rand = { version = "0.5.0", optional = true }
chashmap = { version = "2.1.0", optional = true }
clap = { version = "2.20.3", optional = true }
zipf = { version = "4.0.0", optional = true }
ccl = "4.12.1"

[dev-dependencies]
rand = "0.5.0"

[profile.release]
debug = true

[[bin]]
name="benchmark"
path="src/bin/benchmark.rs"
required-features = ["bench"]
