[package]
name = "concache-bench"
version = "0.1.0"
authors = ["Aditya Saligrama <saligrama427@gmail.com>", "Andrew Shen <shenandrew95@gmail.com>", "Jon Gjengset <jon@thesquareplanet.com>"]

[dependencies]
concache_crossbeam = { path = "../concache_crossbeam" }
chashmap = "2.1.0"
clap = "2.20.3"
zipf = "0.2.0"
rand = "0.3"

[profile.release]
debug = true
